# project-sentinel

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  task.md
.github/workflows/: ci.yml
agents/: __init__.py
agents/ingestion/: pyproject.toml
agents/ingestion/src/sentinel_ingestion/: __init__.py
agents/supervisor/: pyproject.toml
agents/supervisor/src/sentinel_supervisor/: __init__.py
docs/setup/: development-environment.md  project-management.md
infrastructure/: README.md
services/: __init__.py
services/api/: pyproject.toml
services/api/src/sentinel_api/: __init__.py
services/orchestrator/: pyproject.toml
services/orchestrator/src/sentinel_orchestrator/: __init__.py
shared/: __init__.py
shared/core/: pyproject.toml
shared/core/src/sentinel_core/: __init__.py
