[project]
name = "sentinel"
version = "0.1.0"
description = "Project SENTINEL monorepo workspace"
authors = [{ name = "Suryakanta Subudhi" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.10"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
  "agents/supervisor",
  "agents/ingestion",
  "services/orchestrator",
  "services/api",
  "shared/core"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py", "*_test.py"]
