[project]
name = "sentinel-ingestion-agent"
version = "0.1.0"
description = "Data ingestion agent for Project SENTINEL"
authors = [{ name = "Suryakanta Subudhi" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
