[project]
name = "sentinel-orchestrator-service"
version = "0.1.0"
description = "Orchestrator service for Project SENTINEL"
authors = [{ name = "Suryakanta Subudhi" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
